# codif-ape-preprocess

./: .gitignore  README.md  pyproject.toml  setup.sh
.dvc/: config
argo-workflows/: business-rule-based-data-cleansing.yaml  precompute-sentence-embedding.yaml
metadata/: add_row_rules.yaml  update_rules.yaml
src/: main.py
src/cleaning/: clean_for_rules.py  cleaner.py
src/constants/: __init__.py  col_renaming.py  inputs.py  matchers.py  models.py  paths.py  regex_patterns.py  targets.py  thresholds.py  vector_db.py
src/core/: audit.py  decorators.py  io.py  loader.py  registry.py  rule_engine.py
src/core/utils/: text_utils.py
src/dashboard/: dashboard_precompute.py  db.py
src/experiments/: experiment_faiss_similarity.py
src/label_cleaning/: main.py
src/label_cleaning/cleaning/: clean_for_rules.py  cleaner.py
src/label_cleaning/core/: decorators.py  loader.py  registry.py  rule_engine.py
src/label_cleaning/dashboard/: dashboard_precompute.py  db.py
src/label_cleaning/experiments/: experiment_faiss_similarity.py
src/label_cleaning/matching/: __init__.py  matchers.py  multi_matcher.py
src/label_cleaning/rules/: __init__.py
src/label_cleaning/tools/: generate_cj_rules.py  load_vector_db.py
src/label_cleaning/utils/: cleaning.py  dashboard.py  matching.py  rules.py
src/label_cleaning/visualisation/: add_viz_doc.md  plots.py  run_plot.py
src/matching/: __init__.py  matchers.py  multi_matcher.py
src/pre_tokenization/: pre_tokenize.py
src/pre_tokenization/configs/: ngram.yaml
src/pre_tokenization/ngram_tokenizer/: __init__.py  main.py  utils.py
src/pre_tokenization/split/: split.py
src/preprocessing/: preprocess.py  utils.py
src/preprocessing/split/: __init__.py  split.py
src/rules/: rule_restau_rapide_5611J.py
src/tools/: generate_cj_rules.py
src/utils/: cleaning.py  dashboard.py  file.py  io.py  matching.py  rules.py
src/visualisation/: add_viz_doc.md  plots.py  run_plot.py
(+443 files in other folders)
