[project]
name = "codif-ape-preprocess"
version = "0.1.0"
description = "Hello world"
readme = "README.md"
authors = [
    { name = "nrandriamanana", email = "nathan.randriamanana@insee.fr"},
    { name = "Meilame Tayebjee", email = "meilame.tayebjee@insee.fr" },

]
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "dvc>=3.63.0",
    "dvc-s3>=3.2.2",
    "faiss-cpu>=1.11.0.post1",
    "importlib>=1.0.4",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "matplotlib-venn>=1.1.2",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pandarallel>=1.6.5",
    "pandas>=2.3.1",
    "pathlib>=1.0.1",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
    "qdrant-client>=1.15.1",
    "rapidfuzz>=3.13.0",
    "s3fs>=2025.7.0",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
]
